revisão facilitu, falta apenas o busca local

--- a/facility/arred_linear.tex
+++ b/facility/arred_linear.tex
@@ -1,4 +1,5 @@
-Assim como no método anterior, a função custo também satisfaz a desigualdade triangular. \\
+Assim como no método anterior, a função custo também satisfaz a desigualdade triangular.
+
 Vamos então definir algumas coisas que serão necessárias no nosso algoritmo.
 \begin{definition}
     Seja $(x^*,y^*)$ uma solução do programa linear. Dizemos que uma instalação $i$ está na \emph{vizinhança} de um cliente $j$ se $x^*_{ij} > 0$. Seja $N(j) = \{ i \in F : x^*_{ij} > 0\}$.
@@ -10,7 +11,7 @@ Dada essa definição, vamos enunciar um lema que irá nos ajudar a provar uma c
 \begin{proof}
     Como $i \in N(j)$, então $x^*_{ij}>0$. Assim, pelas folgas complementares, a desigualdade do dual correspondente a~\eqref{P4} vale por igualdade, então $v^*_j - w^*_{ij} = c_{ij}$. Como $w^*_{ij} \geq 0$, $c_{ij} \leq v^*_j$. 
 \end{proof}
-Com esse lema, sabemos que se em um conjunto $S \subseteq F$ de instalações abertas, para todo cliente $j \in D$, existe uma instalação aberta $i$ em $N(j)$, então $c_{ij}\leq v_j^*$ e o custo total de associação seria no máximo $\sum_{j\in D}v_j^* \leq \opt(I)$, uma vez que vale a dualidade forte e que o valor da solução do primal é no máximo $\opt(I)$. Entretanto, não é garantido uma cota superior para o custo de abertura de $S$. Vamos descobrir como encontrar um $S$ com um bom custo de abertura e um bom custo de associação. Seja $j_k$ um cliente qualquer. Se abrirmos a instalação $i_k$ mais barata de $N(j_k)$ conseguimos limitar o custo de sua abertura.
+Com esse lema, sabemos que se em um conjunto $S \subseteq F$ de instalações abertas, para todo cliente $j \in D$, existe uma instalação aberta $i$ em $N(j)$, então $c_{ij}\leq v_j^*$ e o custo total de associação seria no máximo $\sum_{j\in D}v_j^* \leq \opt(I)$. Entretanto, não é garantido uma cota superior para o custo de abertura de $S$. Vamos descobrir como encontrar um $S$ com um bom custo de abertura e um bom custo de associação. Seja $j_k$ um cliente qualquer. Se abrirmos a instalação $i_k$ mais barata de $N(j_k)$ conseguimos limitar o custo de sua abertura.
 \[\tag{*} \label{relx_fl:*}
     f_{i_k} = f_{i_k} \sum_{i \in N(j_k)}x^*_{ij_k} = \sum_{i \in N(j_k)}f_{i_k}x^*_{ij_k} \leq \sum_{i \in N(j_k)}f_{i}y^*_{i},
 \]
@@ -26,21 +27,19 @@ Agora, vamos definir o algoritmo. Nele, $S$ será o conjunto das instalações a
     \caption{CS($F,D,c,f$)}
     \label{fl:plrounding}
     \begin{algorithmic}[1]
-        \State Sejam $(x^*,y^*)$ e $(v^*,w^*)$ soluções ótimas para o programa linear e o seu dual
+        \State Sejam $(x^*,y^*)$ e $(v^*,y^*)$ soluções ótimas para o primal e o dual da relaxação do programa inteiro de $I(F,D,c,f)$.
         \State $S \gets \emptyset$
-        \State $C \gets D$ 
+        \State $C_0 \gets D$ 
         \State $k \gets 0$
-        \While{$C \neq \emptyset$}
-        \State Escolha $j_k \in C$ que minimize $v_j^*$
+        \While{$C_k \neq \emptyset$}
+        \State Escolha $j_k \in C_k$ que minimize $v_j^*$
         \State Escolha $i_k \in N(j_k)$ que minimize $f_{i}$
         \State $S \gets S \cup \{i_k\}$
-        \For{\text{todo $j \in N^2(j_k) \cap C$}}
-        \State $\sigma(j) \leftarrow i_k$
-        \EndFor
-        \State $C \gets C \setminus N^2(j_k)$
+        \State Associe a instalação $i_k$ a cada cliente em $N^2(j_k) \cap C_k$
+        \State $C_{k+1} \gets C_k \setminus N^2(j_k)$
         \State $k \gets k+1$
         \EndWhile
-        \State \Return $S$ e $\sigma$
+        \State \Return $S$
     \end{algorithmic}
 \end{algorithm}
 
@@ -49,17 +48,28 @@ O algoritmo aqui apresentado é de autoria de Chudak e Shmoys~\cite{Chudak2003}.
     O algoritmo {\sc CS} é uma $4$-aproximação para o problema da localização de instalações.
 \end{theorem}
 \begin{proof}
-    Primeiro, vamos mostrar que o algoritmo é polinomial. Sabemos que é possível encontrar uma solução para o problema linear e o seu dual em tempo polinomial utilizando o método dos elipsoides~\cite{Kha79}. Sabemos que o laço da linha 6 irá executar no máximo $|D|$ iterações, uma vez que sempre retiramos pelo menos um elemento de $C$. Além disso, as linhas $6-11$ são claramente polinomiais.
-    Agora, vamos mostrar que o algoritmo é uma $4$-aproximação.\\
-    Perceba que, para $k_1$ e $k_2$ com $k_1 < k_2$, $N(j_{k_1})\cap N(j_{k_2}) = \emptyset$, caso contrário $j_{k_2} \in N^2(j_{k_1})$ e seria retirado de $C$ na iteração $k_1$.\\
+    Primeiro, vamos mostrar que o algoritmo é polinomial. Sabemos que é possível encontrar uma solução para o problema linear e o seu dual em tempo polinomial utilizando o método dos elipsoides~\cite{Kha79}. Sabemos que o laço da linha 5 irá executar no máximo $|D|$ iterações, uma vez que sempre retiramos pelo menos um elemento de $C$. Além disso, as linhas $6-12$ são claramente polinomiais.
+
+    Agora, vamos mostrar que o algoritmo é uma $4$-aproximação.
+
+    Perceba que, para $k_1$ e $k_2$ com $k_1 < k_2$, $N(j_{k_1})\cap N(j_{k_2}) = \emptyset$, caso contrário $j_{k_2} \in N^2(j_{k_1})$ e não estaria em $C_{k_2}$.
+
     Seja $F' \subseteq F$, tal que $F' = \bigcup_k N(j_k)$.
     Por \eqref{relx_fl:*}, vale que $f_{i_k} \leq \sum_{i \in N(j_k)}f_{i_k}y^*_{i}$. Então se somarmos para todo $k$, temos
-    \[ \sum_kf_{i_k} \leq \sum_k \sum_{i \in N(j_k)}f_{i}y^*_{i} = \sum_{i \in F'}f_{i}y^*_{i} \leq \sum_{i \in F}f_{i}y^*_{i} \leq \opt(I)\]
-    Agora, vamos fixar uma iteração $k$ e sejam $i = i_k$ e $j = j_k$. Denotemos por $C_k$ o conjunto $C$ no início da iteração $k$. Pelo Lema~\ref{lemma:3.5}, sabemos que $c_{ij} \leq v^*_j$. Seja $\ell \in N^2(j) \cap C_k \setminus \{j\}$ e $h \in N(\ell) \cap N(j)$. Pela desigualdade triangular e como $j$ minimiza $v^*_j$ em $C_k$, temos
-    \[ c_{i\ell} \leq c_{ij} + c_{hj} + c_{h\ell} \leq v_j^* + v_j^* + v_{\ell}^* \leq 3 v_{\ell}^*
+    \[ \sum_kf_{i_k} \leq \sum_k \sum_{i \in N(j_k)}f_{i}y^*_{i} = \sum_{i \in F'}f_{i}y^*_{i} \leq \sum_{i \in F}f_{i}y^*_{i} \leq \opt(I).\]
+
+    Agora, vamos fixar uma iteração $k$ e sejam $i = i_k$ e $j = j_k$. Pelo Lema~\ref{lemma:3.5}, sabemos que $c_{ij} \leq v^*_j$. Seja $\ell \in N^2(j) \cap C_k$ diferente de $j$ e $h \in N(\ell) \cap N(j)$. Pela desigualdade triangular e como $j$ minimiza $v^*_j$ em $C_k$, temos
+    \[ c_{i\ell} \leq c_{ij} + c_{hj} + c_{h\ell} \leq v_j^* + v_j^* + v_{\ell}^* \leq 3 v_{\ell}^*.
         \]
-    Isso vale para todo $\ell \in D$, então
-    \[\sum_{j\in D} c_{\sigma(j)j} \leq 3 \sum_{j \in D} v^*_j \leq 3\opt(I),\]
-    onde a segunda desigualdade vale pela dualidade forte e pela relaxação. \\
+    Então, temos que
+    \begin{subequations}
+        \begin{align*}
+        \sum_{k} {\big (}c_{i_kj_k} + \sum_{j \in N^2(j_k)\cap C_k} c_{i_kj} {\big )} &= \sum_{k} c_{i_kj_k} + \sum_{k}\sum_{j \in N^2(j_k)\cap C_k} c_{i_kj}\\
+        &\leq \sum_k v^*_{j_k} + 3\sum_{k}\sum_{j \in N^2(j_k)\cap C_k} v^*_j\\
+        &\leq 3 \sum_{j \in D}v^*_j \leq 3\opt(I)           
+        \end{align*}
+    \end{subequations}
+    em que a penúltima desigualdade vale pois o algoritmo só para quando $C_k$ é vazio.
+
     Assim, temos que o custo de abertura das instalações é no máximo $\opt(I)$ e o custo de associação é no máximo $3\opt(I)$. Portanto, o custo total da solução $S$ é no máximo $4~\opt(I)$.
 \end{proof}
