--- a/facility/relaxação.tex
+++ b/facility/relaxação.tex
@@ -1,5 +1,7 @@
-Nessa seção vamos mostrar dois algoritmos para o problema de localização de instalações: o arredondamento em programa linear e um algoritmo que utiliza o método primal-dual. \\
-Para isso, vamos modelar o nosso problema como um programa linear inteiro. Vamos relaxá-lo e mostrar o seu dual. \\
+Nessa seção vamos mostrar três algoritmos para o problema de localização de instalações: o arredondamento em programa linear, um algoritmo que utiliza o método primal-dual e um arredondamento probabilístico.
+
+Vamos modelar o nosso problema como um programa linear inteiro. Vamos relaxá-lo e mostrar o seu dual.
+
 Nosso programa inteiro terá dois tipos de variáveis: uma variável $y_i$ para cada $i \in F$ que terá valor 1 se a instalação $i$ foi aberta e 0 caso contrário, e uma variável $x_{ij}$ para cada $i \in F$ e $j \in D$ que terá valor 1 se o cliente $j$ estiver associado a instalação $i$ e 0 caso contrário. Então o programa inteiro para a instância $I(F,D,c,f)$ é:
 \begin{align}
  \text{Minimizar} \quad & \sum_{i \in F}f_iy_i + \sum_{i\in F,j\in D}c_{ij}x_{ij} \nonumber \\
@@ -8,8 +10,9 @@ Nosso programa inteiro terá dois tipos de variáveis: uma variável $y_i$ para 
  &x_{ij} \in \{0,1\} ,\quad \forall i\in F,j\in D \label{fl:x}\\
  &y_i \in \{0,1\}, \quad \; \,\forall i\in F \label{fl:y}.
 \end{align}
-A restrição~\eqref{eq:inst} garante que todo cliente esteja associado a alguma instalação, a restrição~\eqref{eq:fac} garante que todo cliente esteja associado apenas a instalações abertas.\\ 
-Para a relaxação, apenas impomos que $x_{ij} \geq 0$ e $y_i \geq 0$ no lugar de~\eqref{fl:x} e~\eqref{fl:y}, respectivamente. Assim, temos os seguintes programas primal e dual correspondentes a nossa relaxação:
+A restrição~\eqref{eq:inst} garante que todo cliente esteja associado a alguma instalação, a restrição~\eqref{eq:fac} garante que todo cliente esteja associado apenas a instalações abertas.
+
+Para a relaxação, apenas impomos que $x_{ij} \geq 0$ e $y_i \geq 0$ no lugar de~\eqref{fl:x} e~\eqref{fl:y}, respectivamente. Assim, temos o seguinte programa linear correspondente a nossa relaxação:
     \begin{align}
         \text{Minimizar} \quad & \sum_{i \in F}f_iy_i + \sum_{i\in F,j\in D}c_{ij}x_{ij} \tag{P1} \label{P1}\\
         \text{sujeito a} \quad & \sum_{i\in F} x_{ij}\geq1,  \forall j \in D \tag{P2} \label{P2}\\
@@ -17,6 +20,9 @@ Para a relaxação, apenas impomos que $x_{ij} \geq 0$ e $y_i \geq 0$ no lugar d
         &x_{ij} \geq 0,\quad \forall i\in F,j\in D\tag{P4}\label{P4}\\
         &y_i \geq 0, \quad \; \,\forall i\in F \tag{P5} \label{P5}
        \end{align}
+
+    A partir desse programa linear conseguimos construir o seu dual que é o seguinte:
+
     \begin{align}
         \text{Maximizar} \quad & \sum_{j \in D} v_{j} \tag{D1} \label{D1}\\
         \text{sujeito a} \quad & \sum_{j\in D} w_{ij}\leq f_i, \quad \forall i \in F \tag{D2} \label{D2}\\
@@ -24,10 +30,11 @@ Para a relaxação, apenas impomos que $x_{ij} \geq 0$ e $y_i \geq 0$ no lugar d
         &w_{ij} \geq 0 ,\quad \forall i\in F,j\in D\tag{D4} \label{D4}\\
         &v_j \geq 0, \quad \; \,\forall j\in D \tag{D5} \label{D5}.
        \end{align}
+
 Sabemos que cada variável de um destes programas está associada a uma restrição do outro programa. 
 Especificamente, a variável $x_{ij}$ está associada à desigualdade~\eqref{D3}, a variável $y_i$ está associado à desigualdade~\eqref{D2}, a variável $w_{ij}$ está associada à desigualdade~\eqref{P3} e a variável $v_j$ está associado a desigualdade~\eqref{P2}.
 
-Como o primal é uma relaxação do nosso problema e trata-se de um problema de minimização, vale que o valor de uma solução ótima dele é no máximo valor o ótimo do nosso problema.
+Como o primal é uma relaxação do nosso problema e trata-se de um problema de minimização, vale que o valor de uma solução ótima dele é no máximo o valor ótimo do nosso problema.
 
 Vamos aqui interpretar o programa dual. Chamamos as variáveis $v$ de orçamento e as variáveis $w$ de contribuição. Dizemos que um cliente $j$ \emph{contribui} para uma instalação $i$ se $w_{ij} > 0$. Uma instalação recebe contribuições dos clientes para pagar pela sua abertura. Uma vez que as contribuições são suficientes para a sua abertura, a instalação não precisa receber mais contribuições. Isso está explicito na restrição~\eqref{D2}.
 
