começo do guloso inserido, falta dual fitting e analise

--- a/main.tex
+++ b/main.tex
@@ -90,7 +90,7 @@ Hsu e Nemhauser~\cite{HSU1979209} mostraram que não existe algoritmo polinomial
 \newpage
 
 \subsection{Algoritmo guloso}
-
+    \input{facility/guloso.tex}
 \newpage
 \bibliographystyle{plain}
 \bibliography{aprox.bib}
