dual fitting adicionado, revisar e analises

--- a/aprox.bib
+++ b/aprox.bib
@@ -280,3 +280,12 @@ numpages = {18}
   biburl       = {https://dblp.org/rec/journals/corr/abs-0809-2554.bib},
   bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
+
+@misc{jain2002greedy,
+      title={Greedy Facility Location Algorithms Analyzed using Dual Fitting with Factor-Revealing LP}, 
+      author={Kamal Jain and Mohammad Mahdian and Evangelos Markakis and Amin Saberi and Vijay V. Vazirani},
+      year={2002},
+      eprint={cs/0207028},
+      archivePrefix={arXiv},
+      primaryClass={cs.DS}
+}
