--- a/facility/relaxação.tex
+++ b/facility/relaxação.tex
@@ -22,7 +22,7 @@ Para a relaxação, apenas impomos que $x_{ij} \geq 0$ e $y_i \geq 0$ no lugar d
        \end{align}
 
     A partir desse programa linear conseguimos construir o seu dual que é o seguinte:
-
+    \label{D}
     \begin{align}
         \text{Maximizar} \quad & \sum_{j \in D} v_{j} \tag{D1} \label{D1}\\
         \text{sujeito a} \quad & \sum_{j\in D} w_{ij}\leq f_i, \quad \forall i \in F \tag{D2} \label{D2}\\
