--- a/main.tex
+++ b/main.tex
@@ -15,7 +15,7 @@
 \vspace{5mm} 
 
 \begin{abstract}
-Este é o projeto de pesquisa do aluno de graduação João Guilherme Alves Santos sob supervisão da Profa.\ Dra.\ Cristina Gomes Fernandes. O objetivo desse projeto é estudar e pesquisar algoritmos de aproximação para problemas de clustering. O material estudado fornecerá a João Guilherme o conhecimento necessário para buscar um futuro mestrado na área.
+Este é o texto escrito durante a iniciação científica do aluno de graduação João Guilherme Alves Santos sob supervisão da Profa.\ Dra.\ Cristina Gomes Fernandes.
 \end{abstract}
 
 \end{center}
