tentativa de colocar footnotes

--- a/main.tex
+++ b/main.tex
@@ -22,7 +22,7 @@ Este é o texto escrito durante a iniciação científica do aluno de graduaçã
 \newpage
 
 \tableofcontents
-
+\addtocontents{toc}{\label{revisao} \protect\footnotetext[1]{ Essas seções ainda serão revisadas e, possivelmente, passarão por alterações}}
 \newpage
 
 \section{Introdução}
@@ -85,11 +85,11 @@ Hsu e Nemhauser~\cite{HSU1979209} mostraram que não existe algoritmo polinomial
     \input{facility/arred_prob.tex}
 \newpage
 
-\subsection{Busca local}
+\subsection{Busca local\ref{revisao}}
     \input{facility/buscalocal.tex}
 \newpage
 
-\subsection{Algoritmo guloso}
+\subsection{Algoritmo guloso\ref{revisao}}
     \input{facility/guloso.tex}
 \newpage
 \bibliographystyle{plain}
